fix lỗi bóng (3)